syntax = "proto3";

package proto;
option java_package = "com.lab.rpc.common.message.proto";

message RPCRequest {
  string serverName = 1;
  string functionName = 2;
  repeated string parameter_types = 3;
  repeated string parameters = 4;
}
